explicitly set border:0 for all table-related elements in ms in main-content, as hopeful fix for android border / scrollbars? we'll see...

--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -121,6 +121,10 @@ a:hover {
             padding: 0 15px;
         }
     }
+
+    table, tbody, td, tr {
+        border: 0 !important;
+    }
 }
 
 .main-content-inner {
